Issue #267 : fix padding player button on ios

--- a/src/app/components/audio-player/audio-player.component.scss
+++ b/src/app/components/audio-player/audio-player.component.scss
@@ -57,11 +57,13 @@ canvas, .poster{
     width:30px;
     height:30px;
     margin: 0 5px;
+    padding: 0;
     border-radius: 5px;
     background: var(--ion-color-contrast);
     color: var(--ion-color-inria);
     text-align: center;
-    line-height: 30px;
+    line-height: 35px;
+    font-size: .8rem;
 
     ion-icon {
       position: absolute;
