--- a/src/app/components/video-player/video-player.component.scss
+++ b/src/app/components/video-player/video-player.component.scss
@@ -106,11 +106,12 @@
       width:30px;
       height:30px;
       margin: 0;
+      padding: 0;
       border-radius: 5px;
       background: var(--ion-color-contrast);
       color: var(--ion-color-inria);
       text-align: center;
-      line-height: 30px;
+      line-height: 35px;
 
       ion-icon {
         position: absolute;
